--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -64,5 +64,5 @@
     animation-fill-mode: both;
   }
   .fadeIn{
-      animation: fadeIn 1s 1.5s both;
+      animation: fadeIn 1.4s 1.5s both;
   }
