--- a/sass/layout/_breakpoints.scss
+++ b/sass/layout/_breakpoints.scss
@@ -1,34 +1,83 @@
-@media only screen 
-  and (min-width: 320px) 
-  and (max-width: 640px)
-  {
+// @media only screen
+//   and (min-width: 320px)
+//   and (max-width: 640px)
+//   {
+//     .heading-primary{
+//         margin-top: -5rem;
+//         font-size: 5rem;
+//     }
+//     .heading-secondary{
+//         // margin-top: -5rem;
+//         font-size: 1rem;
+//     }
+//     .text-box-border{
+//             border: .3rem solid white;
+//             margin-right: auto;
+//             margin-left: auto;
+//             padding-left: 2rem;
+//             padding-right: 2rem;
+//     }
+//     #icon-div{
+//         width: auto;
+//         margin-bottom: -1rem;
+//     }
+//     .icon{
+//         font-size: 2.1rem;
+//     }
+//     .heading-tertiary{
+//         font-size: 1rem;
+//     }
+
+// }
+
+@media only screen and (max-width: 900px) {
+  #icon-div {
+    width: auto;
+    margin-bottom: -1rem;
+  }
+}
+@media only screen and (max-width: 835px) {
+  .heading-primary{
+    font-size:8rem
+  }
+  .contact-heading {
+    font-size: 8rem;
+  }
+  .text-box-border {
+    border: .5rem solid white;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .heading-primary{
+    font-size:6rem
+  }
+  .contact-heading {
+    font-size: 6rem;
+  }
+
+}
+@media only screen and (max-width: 520px) {
+  .heading-primary{
+    font-size:5rem
+  }
+  .contact-heading {
+    font-size: 5rem;
+  }
+
+}
+@media only screen and (max-width: 425px) {
+  .heading-primary{
+    font-size:4.5rem
+  }
+  .contact-heading {
+    font-size: 4.5rem;
+  }
+}
+@media only screen and (max-width: 395px) {
     .heading-primary{
-        margin-top: -5rem;
-        font-size: 5rem;
+      font-size:4rem
     }
-    .heading-secondary{
-        // margin-top: -5rem;
-        font-size: 1rem;
-    }
-    .text-box-border{
-            border: .3rem solid white;
-            margin-right: auto;
-            margin-left: auto;
-            padding-left: 2rem;
-            padding-right: 2rem;
-    }
-    #icon-div{
-        width: auto;
-        margin-bottom: -1rem;
-    }
-    .icon{
-        font-size: 2.1rem;
-    }
-    .heading-tertiary{
-        font-size: 1rem;
-    }
-    .contact-heading{
-        padding: .8rem;
-        font-size: 4rem;
-    }
+  .contact-heading {
+    font-size: 4rem;
+  }
 }
